# WeatherServer

./: Cargo.toml  README.md
src/: defs.rs  location_search.rs  main.rs  weather_service_impl.rs
src/forecast/: available_services.rs  mod.rs
src/forecast/forecast_services/: openweathermap.rs  weatherapi.rs
