[package]
name = "weatherserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
httpmock = "0.6"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.7.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-ini = "0.18.0"

weather_service_rpc = { git = "https://github.com/VladyslavYareschenko/weather_service_rpc" }